welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: ':' expected but '.' found.
def faireV(color.YELLOW) {setCouleurBrosse(color.YELLOW);avance();marquerSol();avance();gauche();avance();marquerSol();recule();droite();avance();marquerSol();avance();gauche()}
                ^MethodsPicture:38: error: identifier expected but '}' found.
}
^